Refactor: moving has_out_of_date_configuration? call from partial to vertical_nav_helper

--- a/app/views/shared/provider/navigation/_vertical_nav.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav.html.slim
@@ -3,12 +3,11 @@
 - sections = vertical_nav_sections || []
 - active_section = active_submenu
 - active_item = active_sidebar
-- out_of_date_config = service ? has_out_of_date_configuration?(service) : false
 
-#vertical-nav-wrapper class='pf-c-page__sidebar' data-sections=sections.to_json data-active_section=active_section data-active_item=active_item data-out_of_date_config=out_of_date_config.to_s
+#vertical-nav-wrapper class='pf-c-page__sidebar' data-sections=sections.to_json data-active_section=active_section data-active_item=active_item
 
   div.pf-c-page__sidebar-body
     nav#mainmenu class='pf-c-nav'
       ul.pf-c-nav__list
         - sections.each do |section|
-          = render 'shared/provider/navigation/vertical_nav_item', :section => section, :active_section => active_section, :active_item => active_item, :out_of_date_config => out_of_date_config
+          = render 'shared/provider/navigation/vertical_nav_item', :section => section, :active_section => active_section, :active_item => active_item
