--- a/app/views/layouts/provider.html.slim
+++ b/app/views/layouts/provider.html.slim
@@ -16,7 +16,7 @@ html[lang="en"]
   body
     #wrapper.pf-c-page
       = render partial: '/shared/provider/header'
-      = render partial: 'shared/provider/navigation/vertical_nav', :locals => {service: @service} unless active_menu == :dashboard
+      = render partial: 'shared/provider/navigation/vertical_nav' unless active_menu == :dashboard
       #border.pf-c-page__main class="self_clear" role="main"
         = render 'shared/provider/flash', flash: flash
         main.Main#content class=('Main--callToAction' if call_to_action?)
