--- a/app/views/api/services/_delete.html.slim
+++ b/app/views/api/services/_delete.html.slim
@@ -9,4 +9,4 @@
     ' all applications, application plans, metrics, pricing rules, features, service plans and subscriptions of this service. Therefore all authorization and reporting calls for this service will no longer be valid.
 
   p
-    = delete_service_link(service, label: "I understand the consequences, proceed to delete '#{h(service.name)}' service")
+    = delete_service_link(service, label: "I understand the consequences, proceed to delete '#{j(service.name)}' service")
