--- a/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
@@ -38,7 +38,7 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
       = semantic_form_for @proxy, url: admin_service_integration_path(@service) do |f|
         = f.buttons class: "buttons buttons-inline" do
           = f.hidden_field :lock_version
-          = f.button "Promote v. #{@show_presenter.last_sandbox_config.version+1} to Staging",
+          = f.button "Promote v. #{@show_presenter.next_sandbox_config_version} to Staging",
             button_html: {class: 'important-button PromoteButton', data: { disable_with: 'promoting…' }}
 
 - unless deployment_option_is_service_mesh?(@service)
