--- a/app/assets/stylesheets/provider/_colors.scss
+++ b/app/assets/stylesheets/provider/_colors.scss
@@ -11,6 +11,8 @@ $osloGray:       #8b8d8f; // pf-black-500
 $outerSpaceGray: #393f44; // pf-black-800
 $gallery:        #ededed; // pf-black-200
 $white:          #fff;
+$whiteBoxShadowColor: rgba(3, 3, 3, .2) 0 1px 2px 0;
+$whiteBoxShadowColorIE11: rgba(3, 3, 3, .2) 0 1px 3px 1px;
 $wildSandGray:   #f5f5f5; // pf-black-150
 
 // colors
