--- a/app/assets/stylesheets/provider/_logo.scss
+++ b/app/assets/stylesheets/provider/_logo.scss
@@ -1,4 +1,4 @@
-@import 'provider/layouts/_main.scss';
+@import 'provider/layouts/main';
 
 .logo-3scale {
   position: relative;
@@ -41,8 +41,8 @@
 }
 
 #logo_container {
-  padding: line-height-times(1);
   @include white-box-shadow;
+  padding: line-height-times(1);
 
   .delete {
     float: right;
