--- a/app/views/api/policies/edit.html.slim
+++ b/app/views/api/policies/edit.html.slim
@@ -2,5 +2,6 @@
 
 = semantic_form_for @proxy, url: admin_service_policies_path(@service) do |f|
   = render '/api/integrations/apicast/shared/policies', f: f
-  = f.button t('formtastic.actions.policies.update'), button_html: {class: 'important-button update', name: 'update', value: '1',
-    id: 'policies-button-sav', title: 'Update Policies'} 
+  = f.buttons do
+    = f.button t('formtastic.actions.policies.update'), button_html: {class: 'important-button update', name: 'update', value: '1',
+      id: 'policies-button-sav', title: 'Update Policies'} 
