--- a/app/views/api/integrations/apicast/shared/_deployment_options.html.slim
+++ b/app/views/api/integrations/apicast/shared/_deployment_options.html.slim
@@ -1,5 +1,5 @@
 .SettingsBox
-  - unless @apiap
+  - unless apiap?
     a href="" class="IntegrationSettingsBox-toggle" data-state="open" edit integration settings
     article.IntegrationSettingsBox-summary data-state="open"
       - if can_toggle_apicast_version?
