--- a/app/views/api/integrations/show.html.slim
+++ b/app/views/api/integrations/show.html.slim
@@ -12,8 +12,12 @@
     - when /^service_mesh/
       = render 'api/integrations/apicast/configuration_driven/apicast'
     - else
-      - if @show_presenter.any_sandbox_configs?
+      - if @show_presenter.apicast_config_ready?
         = render 'api/integrations/apicast/configuration_driven/apicast'
       - else
-        ' To get started with this service on APIcast,
-        = link_to "add the base URL of your API and save the configuration.", edit_admin_service_integration_path(@service), class: "important-button"
+        - if apiap?
+          ' To get started with this product on APIcast,
+          = link_to "add a Backend and promote the configuration.", new_admin_service_backend_api_config_path(@service), class: "important-button"
+        - else
+          ' To get started with this service on APIcast,
+          = link_to "add the base URL of your API and save the configuration.", edit_admin_service_integration_path(@service), class: "important-button"
