--- a/app/views/api/backend_api_configs/new.html.slim
+++ b/app/views/api/backend_api_configs/new.html.slim
@@ -7,7 +7,8 @@
                   collection: current_account.backend_apis.accessible.not_used_by(@backend_api_config.service_id),
                   include_blank: false,
                   prompt: 'Select a Backend',
-                  label: 'Backend'
+                  label: 'Backend',
+                  hint: link_to('Create a Backend that can be used by any Product', new_provider_admin_backend_api_path)
     = form.input :path
 
   = form.buttons do
