--- a/app/assets/stylesheets/provider/_groups.scss
+++ b/app/assets/stylesheets/provider/_groups.scss
@@ -1,1 +1,2 @@
-#groups form.formtastic fieldset > ol > li fieldset legend { width:auto }
+#groups form.formtastic fieldset > ol > li fieldset legend { width:auto; }
+#groups form.formtastic fieldset.buttons { margin: 0; }
