--- a/app/assets/stylesheets/provider/admin/_account.scss
+++ b/app/assets/stylesheets/provider/admin/_account.scss
@@ -16,6 +16,11 @@
   }
 
   .overview-box {
+
+    & > table.data {
+      border-top-width: line-height-times(1 / 2);
+    }
+
     & > table.list {
       @include white-box-shadow;
       margin: 1px;
