--- a/app/assets/stylesheets/provider/_inline_helper.scss
+++ b/app/assets/stylesheets/provider/_inline_helper.scss
@@ -8,7 +8,7 @@
   margin-left: line-height-times(1/4);
   font-size: $font-size-sm;
   box-shadow: 0 0 line-height-times(1/2) $box-shadow-color;
-  background: rgba($content-background, .99);
+  background: $white;
   border: $border-width solid #f3a137;
   border-radius: $border-radius;
   border-top-left-radius: 0;
@@ -24,6 +24,7 @@
 }
 
 .formtastic .helpButton {
+  position: absolute;
   right: line-height-times(-1/4);
-  top: line-height-times(1/8);
+  top: 0;
 }
