--- a/app/assets/stylesheets/provider/_legacy_theme.scss
+++ b/app/assets/stylesheets/provider/_legacy_theme.scss
@@ -1,10 +1,11 @@
+@import 'provider/layouts/main';
+
 div.dashboard_bubble, div.wide_dashboard_bubble, div.narrow_dashboard_bubble {
-  border: $border-width solid  $border-color;
-  padding: line-height-times(1);
-  margin-bottom: line-height-times(1);
-  background-color: $body-background;
-  box-shadow: rgba(3, 3, 3, 0.2) 0px 1px 2px 0px;
+  @include white-box-shadow;
   border: none;
+  margin-bottom: line-height-times(1);
+  padding: line-height-times(1);
+  overflow: hidden;
 
   &> table.list:first-child {
     margin-top: line-height-times(-1/2);
