--- a/app/views/buyers/groups/show.html.erb
+++ b/app/views/buyers/groups/show.html.erb
@@ -6,7 +6,7 @@
 
   <%= semantic_form_for @account,
                       :url => admin_buyers_account_groups_path(@account),
-                      :html => {:method => :put, :style=> "padding:5px;" } do | f | -%>
+                      :html => {:method => :put } do | f | -%>
 
     <%= f.inputs do %>
       <%= f.input :groups,
