Consider a service integrated even without traffic

--- a/app/views/provider/admin/dashboards/_service_navigation.html.slim
+++ b/app/views/provider/admin/dashboards/_service_navigation.html.slim
@@ -51,7 +51,7 @@ nav.DashboardNavigation
     // Integration
     - if can?(:manage, :plans)
       li.DashboardNavigation-list-item
-        - if service.has_traffic?
+        - if service.has_traffic? || (apiap? && service.proxy.proxy_configs.sandbox.any?)
           - if has_out_of_date_configuration?(service)
             = dashboard_navigation_link 'Integration',
                                         path_to_service(service),
