Fix wrong page rendering in Service Settings page
THREESCALE-3588
Currently if we try to save a service settings with wrong value,
it renders the service edit page instead of the service settings
page. This commit fixes this

--- a/app/views/api/services/forms/_settings.html.slim
+++ b/app/views/api/services/forms/_settings.html.slim
@@ -39,7 +39,7 @@
       thead
         tr
           th
-          - @alert_limits.each do |level|
+          - alert_limits.each do |level|
             th
               = level
               | %
