--- a/app/views/api/services/forms/_usage_rules.html.slim
+++ b/app/views/api/services/forms/_usage_rules.html.slim
@@ -39,7 +39,7 @@
       thead
         tr
           th
-          - @alert_limits.each do |level|
+          - alert_limits.each do |level|
             th
               = level
               | %
