--- a/app/views/api/services/forms/_integration_settings_apiap.html.slim
+++ b/app/views/api/services/forms/_integration_settings_apiap.html.slim
@@ -1,10 +1,9 @@
 = javascript_pack_tag 'settings'
 
+- @service.deployment_option ||= 'hosted'
+
 #settings
   = form.inputs 'Deployment', id: 'integration-wrapper' do
-
-    - if @service.deployment_option == nil
-      - @service.deployment_option = 'hosted'
 
     = form.input :deployment_option,
             as: :radio,
@@ -25,3 +24,4 @@
 
     = form.semantic_fields_for :proxy do |f|
       = render 'api/services/forms/authentication_settings', f: f, oauth_hint: 'apicast_oauth'
+      = render 'api/integrations/apicast/shared/proxy_endpoints', f: f, service: @service, proxy: @service.proxy
