--- a/app/views/provider/admin/dashboards/_service.html.slim
+++ b/app/views/provider/admin/dashboards/_service.html.slim
@@ -3,7 +3,10 @@ section.DashboardSection.DashboardSection--service class=('DashboardSection--tog
     - can_toggle = current_account.multiservice? && can?(:manage, :analytics)
     - title = can_toggle ? 'Toggle Dashboard view' : friendly_service_name(service)
     h1.DashboardSection-title title=title class=('DashboardSection-toggle' if can_toggle)
-      i.fa.fa-puzzle-piece>
+      - if current_account.provider_can_use?(:api_as_product)
+        i.fa.fa-cubes>
+      - else
+        i.fa.fa-puzzle-piece>
       = friendly_service_name(service)
     = render 'service_navigation', service: service
 
