:bug: only shows service access message when there are no accessible services

--- a/app/views/api/services/show.html.slim
+++ b/app/views/api/services/show.html.slim
@@ -99,7 +99,8 @@ section class="service-widget"
             '  published) with a total of
             = pluralize service.contracts.service.size, 'contract'
             | .
-          
+
+    - if current_user.accessible_services.empty?
       = render 'shared/service_access'
 
     section[name="activity"]
