--- a/app/views/forums/admin/topics/show.html.erb
+++ b/app/views/forums/admin/topics/show.html.erb
@@ -42,7 +42,7 @@
         <span class="post-details">
           Posted at
           <time class="detail">
-            <%= post.created_at.to_time.to_s(:long) %>
+            <%= post.created_at.to_time.to_s %>
           </time>
           by
           <%= display_author_name(post) %>
