--- a/app/views/forums/public/user_topics/index.html.erb
+++ b/app/views/forums/public/user_topics/index.html.erb
@@ -25,7 +25,7 @@
 	</td>
 	<td class="posts"><%= user_topic.topic.posts.size %></td>
 	<td>
-	  <%= user_topic.topic.last_updated_at.to_time.to_s(:long) %>
+	  <%= user_topic.topic.last_updated_at.to_time.to_s %>
 	</td>
 
 	<td>
