--- a/app/views/provider/admin/messages/_message.html.erb
+++ b/app/views/provider/admin/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <article class="InfoBox">
   <dl class="messageDetails u-dl">
     <dt class="u-dl-term">Date Received</dt>
-    <dd class="u-dl-definition"><%= message.created_at.to_s(:long) %></dd>
+    <dd class="u-dl-definition"><%= message.created_at.to_s %></dd>
     <dt class="u-dl-term">From</dt>
     <dd class="u-dl-definition"><%= message_sender(message) %></dd>
     <dt class="u-dl-term">To</dt>
