--- a/app/views/forums/admin/forums/_topics.html.erb
+++ b/app/views/forums/admin/forums/_topics.html.erb
@@ -35,7 +35,7 @@
           <td class="posts"><%= topic.posts.count %></td>
           <td class="views"><%= number_with_delimiter(topic.hits) %></td>
           <td colspan="2">
-            <%= topic.last_updated_at.to_date.to_s(:long) %>
+            <%= topic.last_updated_at.to_date.to_s %>
 
             <% if topic.last_user -%>
               by <%= display_author_name(topic.recent_post) %>
