--- a/app/views/forums/admin/user_topics/index.html.erb
+++ b/app/views/forums/admin/user_topics/index.html.erb
@@ -23,7 +23,7 @@
           	</td>
           	<td class="posts"><%= user_topic.topic.posts.size %></td>
           	<td>
-          	  <%= user_topic.topic.last_updated_at.to_date.to_s(:long) %>
+          	  <%= user_topic.topic.last_updated_at.to_date.to_s %>
           	</td>
 
           	<td class="operations">
