--- a/app/views/provider/admin/account/authentication_providers/_authentication_provider.html.slim
+++ b/app/views/provider/admin/account/authentication_providers/_authentication_provider.html.slim
@@ -2,7 +2,7 @@ tr
   td.provider
     = link_to "#{icon(authentication_provider.kind, fixed_width: true)} #{authentication_provider.human_kind}".html_safe, provider_admin_account_authentication_provider_path(authentication_provider)
   td
-    = authentication_provider.created_at.to_date.to_s(:long)
+    = authentication_provider.created_at.to_date.to_s
   td
     = authentication_provider.sso_authorizations.count
   td
