--- a/app/views/provider/admin/messages/inbox/index.html.slim
+++ b/app/views/provider/admin/messages/inbox/index.html.slim
@@ -24,7 +24,7 @@ table#messages.data
           td.select= bulk_select_one message
           td = link_to message_subject(message), provider_admin_messages_inbox_path(message)
           td = message_sender(message)
-          td = message.created_at.to_s(:long)
+          td = message.created_at.to_s
           td.operations = delete_button_for provider_admin_messages_inbox_path(message), class: 'action'
 
 = will_paginate(@messages)
