--- a/app/views/provider/admin/messages/outbox/index.html.slim
+++ b/app/views/provider/admin/messages/outbox/index.html.slim
@@ -23,7 +23,7 @@ h2 Sent Messages
           td.select= bulk_select_one message
           td = link_to message.subject, provider_admin_messages_outbox_path(message)
           td = message_receiver(message)
-          td = message.created_at.to_s(:long)
+          td = message.created_at.to_s
           td.operations = delete_button_for provider_admin_messages_outbox_path(message), class: 'action'
 
   = will_paginate(@messages)
