--- a/lib/developer_portal/app/views/shared/_footer.html.erb
+++ b/lib/developer_portal/app/views/shared/_footer.html.erb
@@ -7,11 +7,13 @@
     </li>
     <% end %>
 
-    <% if site_account.settings.privacy_policy.present? %>
+    <% settings = site_account.settings %>
+
+    <% if settings&.privacy_policy.present? %>
       <li><%= link_to 'Privacy policy', settings_privacy_path %></li>
     <% end %>
 
-    <% if site_account.settings.refund_policy.present? %>
+    <% if settings&.refund_policy.present? %>
       <li><%= link_to 'Refund policy', settings_refunds_path %></li>
     <% end %>
 
