--- a/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
@@ -32,10 +32,11 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
         dt.u-dl-term Secret Token
         dd.u-dl-definition = @proxy.secret_token
 
-    - if apiap?
-      div
-        = semantic_form_for @proxy, url: admin_service_integration_path(@service) do |f|
-          = f.buttons class: "buttons buttons-inline" do
+
+      - if apiap?
+        dt.u-dl-term Promote
+        dd.u-dl-definition
+          = semantic_form_for @proxy, url: admin_service_integration_path(@service) do |f|
             = f.hidden_field :lock_version
             = f.button *promote_to_staging_button_options(@show_presenter)
 
@@ -48,13 +49,20 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
       article.Environment-summary data-state="open" class="Environment--#{@show_presenter.test_state_modifier}"
         h3.Environment-title Staging Environment
         - if @show_presenter.any_sandbox_configs?
-          = @show_presenter.staging_proxy_endpoint
-          .ConfigurationVersion
-            ' v.
-            = @show_presenter.last_sandbox_config.version
-          = semantic_form_for @proxy, url: promote_to_production_admin_service_integration_path(@service, anchor: 'production'), html: { class: 'PromoteForm' } do |f|
-            = f.buttons class: "buttons buttons-inline" do
-              = f.button *promote_to_production_button_options(@show_presenter)
+          dl.u-dl
+            dt.u-dl-term URL
+            dd.u-dl-definition = @show_presenter.staging_proxy_endpoint
+            dt.u-dl-term Version
+            dd.u-dl-definition
+              ' v.
+              = @show_presenter.last_sandbox_config.version
+            dt.u-dl-term Test Curl
+            dd.u-dl-definition
+              code id="api-test-curl" curl "https://api.webtypes.com:443/hello?user_key=95ef7514b278849ec8ec64933bfabedc"
+            dt.u-dl-term Promote
+            dd.u-dl-definition
+              = semantic_form_for @proxy, url: promote_to_production_admin_service_integration_path(@service, anchor: 'production') do |f|
+                = f.button *promote_to_production_button_options(@show_presenter)
         - else
           | no configuration has been saved for the staging environment yet
 
@@ -64,9 +72,12 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
       article.Environment-summary class=("Environment--#{@show_presenter.test_state_modifier}" if @show_presenter.environments_have_same_config?) data-state="open" style="margin-top: 24px;"
         h3.Environment-title Production Environment
         - if @show_presenter.any_production_configs?
-          = @show_presenter.production_proxy_endpoint
-          .ConfigurationVersion
-            ' v.
-            = @show_presenter.last_production_config.version
+          dl.u-dl
+            dt.u-dl-term URL
+            dd.u-dl-definition = @show_presenter.production_proxy_endpoint
+            dt.u-dl-term Version
+            dd.u-dl-definition
+              ' v.
+              = @show_presenter.last_production_config.version
         - else
           | no configuration has been saved for the production environment yet
