rephrases error message
Co-Authored-By: Thomas Maas <thomas@webtypes.com>

--- a/app/views/layouts/_cms.html.erb
+++ b/app/views/layouts/_cms.html.erb
@@ -25,7 +25,7 @@
   <div id="cms-sidebar-layouts" class="cms-sidebar-listing"></div>
   <div id="cms-sidebar-partials" class="cms-sidebar-listing"></div>
   <div id="cms-sidebar-portlets" class="cms-sidebar-listing"></div>
-  <p id="cms-sidebar-error-empty">The folder tree could not load. Please retry.</p>
+  <p id="cms-sidebar-error-empty">Something went wrong, please refresh the page.</p>
 </div>
 
 <div id="tab-content">
