--- a/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
@@ -2,7 +2,6 @@
 - path = section[:path]
 - items = section[:items]
 - is_section_active = active_section == section[:id]
-- integration_out_of_date = section[:outOfDateConfig]
 
 - if items == nil
   li.pf-c-nav__item class=('pf-m-current' if is_section_active)
@@ -13,12 +12,14 @@
   li.pf-c-nav__item class='pf-m-expandable pf-m-expanded' class=('pf-m-current' if is_section_active)
     a.pf-c-nav__link href='#!'
       = title
-      - if integration_out_of_date
-        i.fa.fa-exclamation-triangle
+      
     section.pf-c-nav__subnav
       ul.pf-c-nav__simple-list
         - items.each do |item|
           - is_item_active = is_section_active && active_item == item[:id]
+          - is_item_config_out_of_date = item[:outOfDateConfig]
           li.pf-c-nav__item class=('pf-m-current' if is_item_active)
             = link_to item[:path], class: 'pf-c-nav__link', target: item[:target] do
               = item[:title]
+              - if is_item_config_out_of_date
+                i.fa.fa-exclamation-triangle
