updates wizard with product and backend

--- a/app/assets/stylesheets/provider/themes/wizard.scss
+++ b/app/assets/stylesheets/provider/themes/wizard.scss
@@ -528,6 +528,10 @@ $feedback-color-inactive: $color-text-secondary;
     left: $line-height * -2;
   }
 
+  &.feedback--connect {
+    padding-bottom: 0;
+  }
+
   &.feedback--sec {
     @include padding-trailer(0);
     min-height: auto;
