--- a/app/views/api/pricing_rules/_pricing_rules.html.erb
+++ b/app/views/api/pricing_rules/_pricing_rules.html.erb
@@ -20,7 +20,7 @@
       <th>From</th>
       <th>To</th>
       <th>Price per unit</th>
-      <th class="mini"></th>
+      <th colspan='2' class="mini"></th>
     </tr>
   </thead>
   <tbody id="pricing_rules_table_body">
