--- a/app/assets/stylesheets/provider/_metrics.scss
+++ b/app/assets/stylesheets/provider/_metrics.scss
@@ -20,10 +20,10 @@ th.collapsible {
 
 table.contract_table {
   @include white-box-shadow;
-  border: line-height-times(1) solid $white;
+  border-collapse: collapse;
   border-spacing: 0;
 	margin-bottom: line-height-times(1/2);
-	width: 100%;
+  width: 100%;
 
   &#features {
     table-layout: fixed;
@@ -50,10 +50,10 @@ table.contract_table {
 
     thead {
       th {
-        width: 70%;
+        width: 64%;
       }
       th + th {
-        width: 10%;
+        width: 12%;
       }
     }
 
@@ -116,8 +116,6 @@ table.contract_table {
 
   td.metric_slot {
     padding: line-height-times(1);
-    border-left: $border-width solid $border-color;
-    border-right: $border-width solid $border-color;
 
     table {
       thead {
@@ -148,3 +146,51 @@ table.contract_table {
     background: $font-color;
   }
 }
+
+
+// Overrides
+table.contract_table {
+
+  > thead tr th {
+    padding-top: line-height-times(1);
+    padding-bottom: line-height-times(1 / 2);
+    &:first-child {
+      padding-left: line-height-times(1);
+    }
+    &:last-child {
+      padding-right: line-height-times(1);
+    }
+  }
+
+  tbody tr td {
+    &:first-child {
+      padding-left: line-height-times(1);
+    }
+    &:last-child {
+      padding-right: line-height-times(1);
+      border-top: 1px solid #d1d1d1;
+    }
+    &.operations:last-child {
+      padding-right: line-height-times(1);
+    }
+  }
+
+  table.usage_table {
+    border-collapse: collapse;
+    border: 0;
+
+    thead tr.table_title th {
+      position: relative;
+    }
+  }
+
+  #metrics_container > tr > th.backend_api_metric_title {
+    padding-left: line-height-times(1);
+  }
+
+  thead tr th.operations {
+    position: relative;
+  }
+
+}
+
