--- a/app/assets/stylesheets/provider/admin/apiconfig/services/_proxies.scss
+++ b/app/assets/stylesheets/provider/admin/apiconfig/services/_proxies.scss
@@ -427,7 +427,7 @@ form.formtastic fieldset > ol > li.radio--iconic {
 
     &>[class^="fa fa-"] {
       font-size: 40px;
-      background-color: $content-background;
+      background-color: $white;
       margin-left: -60px;
       padding: line-height-times(1/4);
       position: absolute;
