--- a/app/assets/stylesheets/provider/admin/_account.scss
+++ b/app/assets/stylesheets/provider/admin/_account.scss
@@ -17,11 +17,11 @@
 
   .overview-box {
 
-    & > table.data {
+    table.data {
       border-top-width: line-height-times(1 / 2);
     }
 
-    & > table.list {
+    table.list {
       @include white-box-shadow;
       margin: 1px;
 
