--- a/app/assets/stylesheets/provider/_metrics.scss
+++ b/app/assets/stylesheets/provider/_metrics.scss
@@ -152,8 +152,8 @@ table.contract_table {
 table.contract_table {
 
   > thead tr th {
-    padding-top: line-height-times(1);
     padding-bottom: line-height-times(1 / 2);
+    padding-top: line-height-times(1);
     &:first-child {
       padding-left: line-height-times(1);
     }
@@ -167,8 +167,8 @@ table.contract_table {
       padding-left: line-height-times(1);
     }
     &:last-child {
+      border-top: 1px solid $altoGray;
       padding-right: line-height-times(1);
-      border-top: 1px solid #d1d1d1;
     }
     &.operations:last-child {
       padding-right: line-height-times(1);
@@ -176,8 +176,8 @@ table.contract_table {
   }
 
   table.usage_table {
-    border-collapse: collapse;
     border: 0;
+    border-collapse: collapse;
 
     thead tr.table_title th {
       position: relative;
