adding close parenthesis in the developer portal

--- a/app/views/provider/admin/cms/templates/_quick_links.html.erb
+++ b/app/views/provider/admin/cms/templates/_quick_links.html.erb
@@ -36,7 +36,7 @@
     <li>
       <p>
         <%= icon('paperclip fa-li') %>
-        <%= link_to 'Upload files', new_provider_admin_cms_file_path %> of any type (i.e. <b>images</b>, <b>documents</b> or <b>MP3s</b>.
+        <%= link_to 'Upload files', new_provider_admin_cms_file_path %> of any type (i.e. <b>images</b>, <b>documents</b> or <b>MP3s</b>).
       </p>
     </li>
   </ul>
