--- a/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
@@ -58,7 +58,7 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
               = @show_presenter.last_sandbox_config.version
             dt.u-dl-term Example curl for testing
             dd.u-dl-definition
-              code id="api-test-curl" curl "https://api.webtypes.com:443/hello?user_key=95ef7514b278849ec8ec64933bfabedc"
+              = api_test_curl(@proxy, config_based: apiap?)
               - unless @service.cinstances.any?
                 br
                 br
