--- a/app/assets/stylesheets/provider/_patternfly_tabs_fake.scss
+++ b/app/assets/stylesheets/provider/_patternfly_tabs_fake.scss
@@ -98,6 +98,7 @@
  */
 
  .DashboardSection--tabs-title {
+    bottom: line-height-times(-1 / 3);
     color: #393f44;
     cursor: pointer;
     float: left;
@@ -106,7 +107,7 @@
     line-height: line-height-times(1);
     margin-right: 0.75rem;
     margin: 0 0 0 0;
-    padding-top: 8px;
+    position: relative;
  }
 
 .pf-tabs-header {
