--- a/app/views/api/integrations/apicast/shared/_policies.html.slim
+++ b/app/views/api/integrations/apicast/shared/_policies.html.slim
@@ -1,18 +1,9 @@
 = f.toggled_inputs 'policies', cookie_name: 'policies-rules', legend: "Policies", id: "policies-container" do
-  div#policies
-
   - if @error.nil?
-    - content_for :javascripts do
-      = javascript_pack_tag 'policies'
-
-    javascript:
-      document.addEventListener('DOMContentLoaded', function () {
-        var registry = #{json @registry_policies}
-        var chain = #{json @proxy.policies_config}
-        var serviceId = #{json @service.id}
-        initPolicies({element: 'policies', registry: registry, chain: chain, serviceId: serviceId})
-      })
+    div#policies data-service-id=@service.id data-registry=@registry_policies.to_json data-chain=@proxy.policies_config.to_json
+    = javascript_pack_tag 'policies'
   - else
     div
       h3 A valid APIcast Policies endpoint must be provided
       p = @error.message
+
