--- a/app/views/provider/admin/onboarding/wizard/connect/new.html.slim
+++ b/app/views/provider/admin/onboarding/wizard/connect/new.html.slim
@@ -1,25 +1,22 @@
-h1 Connect Backend and Product
+h1 Use your Backend in your Product
 
 ol.explain.fa-ul
-  li.feedback.feedback--active.feedback--connect
-    i.icon.fa-li.fa.fa-cube.icon--focus
+  li.feedback
+    i.icon.fa-li.fa.fa-puzzle-piece.icon--focus
     p.text.text--up
-      ' Finally, in order to connect your Backend with the Product using a
-      strong path.
+      ' Finally, we need to add the Backend to the Product we just created so it can be used by your customers.
     p.text.text--up
-      ' You can connect multiple Backends to a single product by using different paths.
-      ' An
-      strong empty path
-      '  means the Backend will be used by default.
+      ' You can
+      strong
+        ' connect multiple Backends to a single Product by using different paths
+      ' . Furthermore each Product can have one Backend with an empty Path ('/').
     .text.text--up
-      ' Choose a path for your current Backend:
+      ' Choose a path for your first Backend:
 
-  li.feedback.feedback--connect
-    i.icon.fa-li.fa.fa-cubes.icon--focus
 
 = semantic_form_for @config, url: provider_admin_onboarding_wizard_connect_path, html: { id: :connect_form } do |f|
   = f.inputs
     = f.input :path, label: 'Path', input_html: { placeholder: '/', autofocus: true }
 
   button type="submit" class="button button--next"
-    = 'Connect to this Path'
+    = 'Add the Backend to the Product'
