--- a/app/views/provider/admin/onboarding/wizard/info/explain.html.slim
+++ b/app/views/provider/admin/onboarding/wizard/info/explain.html.slim
@@ -20,7 +20,7 @@ ol.explain.fa-ul
       span.code-example__path method
 
   li.feedback.explain__step.explain__step--3
-    i.icon.fa-li.fa.fa-cubes
+    i.icon.fa-li.fa.fa-puzzle-piece
     .text.is-transparent
       strong> Your API
       ' returns the response to the customer  through the gateway.
