Remove margin and padding of Promote forms

--- a/app/assets/stylesheets/provider/_forms.scss
+++ b/app/assets/stylesheets/provider/_forms.scss
@@ -573,10 +573,19 @@ li.hidden {
 #integration-tabs {
   form.formtastic {
     box-shadow: none;
+    margin: 0;
+    padding: 0;
   }
 
   form.formtastic.u-inline {
     display: inline-block;
+  }
+
+  .integration {
+    form.formtastic {
+      @include white-box-shadow;
+      padding: line-height-times(1);
+    }
   }
 }
 
